# pirate-jam-15

./: .gitattributes  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  build_and_run_web.bat  index.html  pirate-jam-15-1294b732b9b96e4.js  pirate-jam-15-14136934859f7a30.js  pirate-jam-15-19f8fee2c8d4e8e.js  pirate-jam-15-285935162669a361.js  pirate-jam-15-2a3268509c90f3b7.js  pirate-jam-15-2b47e2269e0b4d9e.js  pirate-jam-15-2eeeb9e233c9082d.js  pirate-jam-15-384c82b579ff4d81.js  pirate-jam-15-584fb52020143225.js  pirate-jam-15-7d63964daa5e9d58.js  pirate-jam-15-816d19996280d3.js  pirate-jam-15-82e919604316af50.js  pirate-jam-15-85268909b3a62ad2.js  pirate-jam-15-87215ac9783e795d.js  pirate-jam-15-92ac7ec7f387992d.js  pirate-jam-15-98e92ecde89eae90.js  pirate-jam-15-9bbd0733b67885c0.js  pirate-jam-15-ad8e738aa707ba44.js  pirate-jam-15-aedd35c25701f38a.js  pirate-jam-15-d14b653064bac25b.js  pirate-jam-15-d709f72f35a10c88.js  pirate-jam-15-e840c7573dd0a783.js  pirate-jam-15-ed10be9eda50af66.js  pirate-jam-15-f41495c639e1f0db.js
.github/workflows/: ci.yml  deploy.yml  itch.yml
assets/: minion_blue.glb  minion_cyan.glb  minion_green.glb  minion_purple.glb  minion_red.glb  minion_void.glb  minion_white.glb  minion_yellow.glb  minions.glb  objects.glb  player.glb
assets/level/: maze.level  preview.level  test001.level
assets/shader/: decal.wgsl
level_editor_scenes/: asd.ron  cross.ron  cross_resized.ron  cross_test.ron  hello.ron  maze.ron  multiple_cameras.ron  test001.ron
src/: fps_counter.rs  free_camera.rs  main.rs  player_minion.rs  player_movement.rs  scene_preview.rs
src/framework/: audio.rs  easing.rs  global_ui_state.rs  grid.rs  level_asset.rs  loading_queue.rs  logical_cursor.rs  mod.rs  navmesh.rs  raw_mesh.rs  tilemap.rs  tileset.rs
src/game/: audio.rs  collision_groups.rs  common.rs  game_cursor.rs  kinematic_char.rs  level.rs  mod.rs  object_def.rs  player_minion.rs  player_movement.rs  top_down_camera.rs
src/game/minion/: collector.rs  destructible_target.rs  minion_builder.rs  mod.rs  walk_target.rs
src/game/objects/: assets.rs  camera.rs  cauldron.rs  definitions.rs  destructible_target_test.rs  mod.rs  physics_cubes_test.rs
src/game/player/: minion_storage.rs  mod.rs  player_builder.rs  player_minion.rs
src/runner/: desktop.rs  mod.rs  wasm.rs
src/tooling/: free_camera.rs  mod.rs
src/tooling/editor/: file_selector_widget.rs  mod.rs  object_def_builder.rs  object_def_widget.rs  tilemap.rs  tilemap_asset.rs  tilemap_controls.rs  tilemap_editor.rs  tilemap_mesh.rs  tilemap_mesh_builder.rs  tilemap_size_widget.rs
src/tooling/editor/widgets/: file_selector.rs  object_def.rs  tilemap_size.rs  tileset.rs
src/tooling/plugins/: cursor_grab_and_center.rs  free_camera.rs  mod.rs  pointer_capture_check.rs  scene_preview.rs
static/: index.html
