[package]
name = "pirate-jam-15"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "^1"
anyhow = "^1"
itertools = "0.13.0"

[dependencies.bevy]
version = "0.14.0"
features = ["bevy_animation", "jpeg"]

[target.'cfg(target_family="wasm")'.dependencies]
web-sys = { version="0.3.69", features=["Document", "Window"] }
yew = { version = "0.21.0", features=["csr"] }
stylist = { version= "0.13.0", features=["yew_integration"] }

bevy_web_file_drop = "0.0.5"

[profile.dev.package."*"]
opt-level = 3 # optimize all dependencies even in debug

[profile.dev]
opt-level = 1 # basic optimizations

[profile.release]
opt-level = 3
codegen-units = 1 # Compile the entire crate as one unit. marginal improvements.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies. marginal improvements.

[profile.wasm-release]
inherits = "release" # Use release profile as default values.
opt-level = "z"      # Optimize with size in mind (also try "s", sometimes it is better).
strip = "debuginfo"  # Strip all debugging information from the binary to reduce file size.
