[package]
name = "pirate-jam-15"
version = "0.1.0"
edition = "2021"

[features]
debug_visuals = ["bevy_egui", "bevy-inspector-egui"]
editor = ["bevy_egui", "bevy-inspector-egui"]

default = [
    # "debug_visuals", # Toggle for rapier debug, egui inspector and gizmos
    # "editor", # Toggle for editor. had to do it because egui was fuzzing around in wasm
]

[dependencies]
cfg-if = "^1"
anyhow = "^1"
itertools = "0.13.0"
rand = "0.8.5"
bincode = "1.3.3"
lz4_flex = "0.11.3"
serde = "1.0.204"
vleue_navigator = "0.8.0"
polyanya = "0.7.1"

bevy_kira_audio = { version = "0.20.0", features = ["ogg"] }
bevy_rapier3d = { version = "0.27.0", features = ["serde-serialize"] }
bevy_egui = { version = "0.28.0", optional = true, default-features = false, features = [
    "render",
    "default_fonts",
] }
bevy-inspector-egui = { git = "https://github.com/the-Glitchy-Galleon/bevy-inspector-egui.git", optional = true, default-features = false, features = [
    "bevy_render",
] }

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "jpeg",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
]

[target.'cfg(target_family="wasm")'.dependencies]
bevy-pointerlockchange-hook = { git = "https://github.com/the-Glitchy-Galleon/bevy-pointerlockchange-hook.git" }
web-sys = { version = "0.3.69", features = ["Document", "Window"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
clap = { version = "4.5.9", features = ["derive"] }
ron = "0.8.1"

[profile.dev.package."*"]
opt-level = 3 # optimize all dependencies even in debug

[profile.dev]
opt-level = 1 # basic optimizations

[profile.release]
opt-level = 3
codegen-units = 1 # Compile the entire crate as one unit. marginal improvements.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies. marginal improvements.

[profile.wasm-release]
inherits = "release" # Use release profile as default values.
opt-level = "z"      # Optimize with size in mind (also try "s", sometimes it is better).
strip = "debuginfo"  # Strip all debugging information from the binary to reduce file size.
